fix(css)text-overflow cards

--- a/css/style.scss
+++ b/css/style.scss
@@ -485,20 +485,26 @@ justify-content: space-between;
 align-items: center;
 line-height: 1rem;
 width: 100%;
-text-overflow:ellipsis;
 }
+
 
 .menu-restaurant h5 {
   margin: 0;
   text-align: left;
   font-weight: 600;
   font-size: 1.1rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .menu-restaurant p {
   margin: 4px 0 0 0;
   font-size: 0.9rem;
   font-weight: lighter;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .menu-restaurant span {
